<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>FilterPropertyWindow</class>
 <widget class="QMainWindow" name="FilterPropertyWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>579</width>
    <height>187</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QLabel" name="lbl_editing_title">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>0</y>
      <width>131</width>
      <height>24</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Arial</family>
      <pointsize>12</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>By Property:</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>160</y>
      <width>91</width>
      <height>19</height>
     </rect>
    </property>
    <property name="text">
     <string>(*) Required fields</string>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>32</y>
      <width>381</width>
      <height>138</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QLabel" name="lbl_pset">
         <property name="text">
          <string>Property Set *</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="lbl_name">
         <property name="text">
          <string>Name *</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="lbl_data_type">
         <property name="text">
          <string>Data Type</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="lbl_value">
         <property name="text">
          <string>Value</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="lbl_uri">
         <property name="text">
          <string>URI</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
        <widget class="QLineEdit" name="txt_pset"/>
       </item>
       <item>
        <widget class="QLineEdit" name="txt_name"/>
       </item>
       <item>
        <widget class="QLineEdit" name="txt_data_type"/>
       </item>
       <item>
        <widget class="QLineEdit" name="txt_value"/>
       </item>
       <item>
        <widget class="QLineEdit" name="txt_uri"/>
       </item>
      </layout>
     </item>
    </layout>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
